debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -205,7 +205,7 @@ Ext.onReady(function (){
                 
                 var filter = new OpenLayers.Filter.Spatial({
                     type: OpenLayers.Filter.Spatial.BBOX,
-                    value: bounds.transform(map.getProjectionObject(), new OpenLayers.Projection("EPSG:32651"));
+                    value: bounds.transform(map.getProjectionObject(), new OpenLayers.Projection("EPSG:32651"))
                     });
                 var http_proto = new OpenLayers.Protocol.HTTP({
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=json"
