--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -208,8 +208,9 @@ Ext.onReady(function (){
                     value: bounds.transform(map.getProjectionObject(), new OpenLayers.Projection("EPSG:32651"))
                     });
                 var http_proto = new OpenLayers.Protocol.HTTP({
-                    url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=json"
+                    url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=json",
                     defaultFilter: filter
+                    readWithPOST: true
                 });
                 
                 var resp = http_proto.read();
