--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -209,7 +209,7 @@ Ext.onReady(function (){
                     });
                 var http_proto = new OpenLayers.Protocol.HTTP({
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=json",
-                    defaultFilter: filter
+                    defaultFilter: filter,
                     readWithPOST: true
                 });
                 
