debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -209,11 +209,9 @@ Ext.onReady(function (){
                     });
                 var http_proto = new OpenLayers.Protocol.HTTP({
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=json",
-                    defaultFilter: filter,
-                    readWithPOST: true
                 });
                 
-                var resp = http_proto.read();
+                var resp = http_proto.read({filter: filter});
                 console.log(resp);
             }
     });
