debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -204,8 +204,8 @@ Ext.onReady(function (){
             notice: function (bounds) {
                 
                 var filter = new OpenLayers.Filter.Spatial({
-                    type: OpenLayers.Filter.Spatial.BBOX,
-                    value: bounds.transform(map.getProjectionObject(), new OpenLayers.Projection("EPSG:32651")),
+                    type: OpenLayers.Filter.Spatial.INTERSECTS,
+                    value: bounds.toGeometry()
                     });
                 var http_proto = new OpenLayers.Protocol.HTTP({
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=json",
