debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -212,6 +212,7 @@ Ext.onReady(function (){
                     srsInBBOX: true,
                     filter: filter
                 });
+                console.log(http_proto.read());
             }
     });
 
