--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -202,15 +202,11 @@ Ext.onReady(function (){
             },
 
             notice: function (bounds) {
-                
-                var filter = new OpenLayers.Filter.Spatial({
-                    type: OpenLayers.Filter.Spatial.INTERSECTS,
-                    value: bounds.toGeometry()
-                    });
+                var filter = "Filter=";
+                console.log(bounds);
+                console.log(bounds.transform( new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651")));
                 var http_proto = new OpenLayers.Protocol.HTTP({
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=gml32",
-                    srsInBBOX: true,
-                    filter: filter
                 });
                 console.log(http_proto.read());
             }
