--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -84,8 +84,6 @@ function createHighlightBox(feature_attribs){
 
 function find_georef(tile_list, georef){
      var tile_indeces= tile_list.map(function (x) { return x.georef });
-     console.log("Searching georef:" +georef);
-     console.log("Current list of georefs:"+tile_indeces);
      
      var index = tile_indeces.indexOf(georef);
      return index;
@@ -205,7 +203,8 @@ Ext.onReady(function (){
                 var filter = "Filter=";
                 console.log(bounds);
                 console.log(map.getProjection());
-                console.log(bounds.transform( new OpenLayers.Projection(map.getProjection()), new OpenLayers.Projection("EPSG:32651")));
+                var transformed_bounds = bounds.transform( new OpenLayers.Projection(map.getProjection()), new OpenLayers.Projection("EPSG:32651"));
+                console.log(transformed_bounds);
                 
                 var http_proto = new OpenLayers.Protocol.HTTP({
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=gml32",
