--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -200,14 +200,15 @@ Ext.onReady(function (){
             },
 
             notice: function (bounds) {
-                var filter = "Filter=";
+                /*var filter = "&Filter" +"<ogc:Filter><ogc:BBOX><ogc:PropertyName>the_geom</ogc:PropertyName>" +
+                    "<gml: Box srsName=\"EPSG:32651\"></gml>*/
                 console.log(bounds);
                 console.log("Height:"+bounds.getHeight());
                 var transformed_bounds = bounds.clone().transform( new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
-                console.log(transformed_bounds);
+                console.log(transformed_bounds.toString());
                 
                 var http_proto = new OpenLayers.Protocol.HTTP({
-                    url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=gml32&bbox= "+bounds.toString()
+                    url: "http://192.168.56.100:8080/geoserver/geonode/wfs?request=GetFeature&typeName=geonode:index&outputFormat=gml32"
                 });              
                 
                 console.log(http_proto.read());
