--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -207,8 +207,9 @@ Ext.onReady(function (){
                 
                 var http_proto = new OpenLayers.Protocol.HTTP({
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?service=wfs&version=1.0.0&request=GetFeature&typeName=geonode:index&outputFormat=gml32"+filter
+
                 });              
-                
+                console.log(http_proto.url);
                 console.log(http_proto.read());
             }
     });
