--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -206,6 +206,7 @@ Ext.onReady(function (){
                     value: bounds.toGeometry()
                 });
                 var http_proto = new OpenLayers.Protocol.HTTP({
+                    defaultFilter: filter,
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?service=wfs&version=1.0.0&request=GetFeature&typeName=geonode:index&outputFormat=application/json"
 
                 });              
