debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -209,13 +209,24 @@ Ext.onReady(function (){
                 
                 var ogcFilter = new OpenLayers.Format.Filter();
                 console.log(ogcFilter.write(filter));
-                var http_proto = new OpenLayers.Protocol.HTTP({
+                /*var http_proto = new OpenLayers.Protocol.HTTP({
                     //defaultFilter: filter,
                     url: "http://192.168.56.100:8080/geoserver/geonode/wfs?service=wfs&version=1.0.0&request=GetFeature&typeName=geonode:index&outputFormat=application/json"
 
+                });*/
+                var wfs_proto = new OpenLayers.Protocol.WFS({
+                    version: "1.1.0",
+                    url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
+                    featurePrefix: "geonode",
+                    featureType: "index",
+                    featureNS: "http://www.geonode.org/",
+                    geometryName: "the_geom",
+                    srsName: "EPSG:32651",
+                    defaultFilter: filter
                 });              
-                console.log(http_proto.url);
-                console.log(http_proto.read({filter: filter}));
+                //console.log(http_proto.url);
+                //console.log(http_proto.read({filter: filter}));
+                console.log(wfs_proto.read());
             }
     });
 
