debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -16,7 +16,7 @@ OpenLayers.Request.DEFAULT_CONFIG.headers = {
     'X-CSRFToken': '{{ csrf_token|escapejs }}'
 };
 
-OpenLayers.ProxyHost = "http://192.168.56.100:8000/proxy?url=";
+OpenLayers.ProxyHost = "http://192.168.56.100:8000/proxy/?url=";
 
 {% autoescape off %}
 
