debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -223,9 +223,8 @@ Ext.onReady(function (){
                     srsName: "EPSG:32651",
                 });              
                 var wfs_layer = new OpenLayers.Layer.Vector("WFS",{
-                    strategies: [new OpenLayers.Strategy.BBOX()],
+                    strategies: [new OpenLayers.Strategy.Filter(filter)],
                     protocol: wfs_proto,
-                    filter: filter
                 });
                 map.addLayers([wfs_layer]);
             }
