--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -227,6 +227,7 @@ Ext.onReady(function (){
                     protocol: wfs_proto,
                 });
                 map.addLayers([wfs_layer]);
+                console.log(wfs_layer);
             }
     });
 
