--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -204,7 +204,8 @@ Ext.onReady(function (){
                 var filter = new OpenLayers.Filter.Spatial({
                     type: OpenLayers.Filter.Spatial.INTERSECTS,
                     property: "the_geom",
-                    value: transformed_bounds.toGeometry()
+                    //value: transformed_bounds.toGeometry()
+                    value: bounds.toGeometry()
                 });
                 
                 var ogcFilter = new OpenLayers.Format.Filter();
