--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -201,6 +201,7 @@ Ext.onReady(function (){
             });
             var vector = new  OpenLayers.Feature.Vector(bounds.toGeometry());
             highlight_layer.addFeatures([vector]);
+            console.log(vector);
             /*var http_proto = new OpenLayers.Protocol.HTTP({
                 //defaultFilter: filter,
                 url: "http://192.168.56.100:8080/geoserver/geonode/wfs?service=wfs&version=1.0.0&request=GetFeature&typeName=geonode:index&outputFormat=application/json"
