--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -190,24 +190,28 @@ Ext.onReady(function (){
                 {keyMask: OpenLayers.Handler.MOD_SHIFT});
             this.box.activate();
         },
-
+        
         notice: function (bounds) {
+            
+            var ll = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.left, bounds.bottom)); 
+            var ur = map.getLonLatFromPixel(new OpenLayers.Pixel(bounds.right, bounds.top)); 
+            var string_bounds = ll.lon.toFixed(4) + ", " + 
+                  ll.lat.toFixed(4) + ", " + 
+                  ur.lon.toFixed(4) + ", " + 
+                  ur.lat.toFixed(4);
+            
+            console.log(string_bounds);
+            console.log(bounds);
             var transformed_bounds = bounds.clone().transform(new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
+            console.log(transformed_bounds);
             var filter = new OpenLayers.Filter.Spatial({
                 type: OpenLayers.Filter.Spatial.INTERSECTS,
                 property: "index",
                 //value: transformed_bounds.toGeometry()
                 value: bounds.toGeometry()
             });
-            var vector = new  OpenLayers.Feature.Vector(bounds.toGeometry());
-            highlight_layer.addFeatures([vector]);
-            console.log(vector);
-            /*var http_proto = new OpenLayers.Protocol.HTTP({
-                //defaultFilter: filter,
-                url: "http://192.168.56.100:8080/geoserver/geonode/wfs?service=wfs&version=1.0.0&request=GetFeature&typeName=geonode:index&outputFormat=application/json"
 
-            });*/
-            /*var wfs_proto = new OpenLayers.Protocol.WFS({
+            var wfs_proto = new OpenLayers.Protocol.WFS({
                 version: "1.0.0",
                 url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
                 featurePrefix: "geonode",
@@ -216,10 +220,7 @@ Ext.onReady(function (){
                 geometryName: "the_geom",
                 srsName: "EPSG:32651",
             });              
-            var wfs_layer = new OpenLayers.Layer.Vector("WFS",{
-                strategies: [new OpenLayers.Strategy.Filter(filter)],
-                protocol: wfs_proto,
-            });*/
+            
             
         }
     });
