debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -223,6 +223,7 @@ Ext.onReady(function (){
                 srsName: "EPSG:32651",
             });              
             
+            var wfs_resp = wfs_proto.read();
             
         }
     });
