debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -224,7 +224,7 @@ Ext.onReady(function (){
             });              
             
             var wfs_resp = wfs_proto.read();
-            
+            console.log(wfs_resp);
         }
     });
 
