debugging wfs filtering, maptiles_geoext_map

--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -221,6 +221,7 @@ Ext.onReady(function (){
                 featureNS: "http://www.geonode.org/",
                 geometryName: "the_geom",
                 srsName: "EPSG:32651",
+                defaultFilter: filter
             });              
             
             var wfs_resp = wfs_proto.read();
